(RHCV-m): fix Header Logo, and text align in menu

--- a/src/App.css
+++ b/src/App.css
@@ -99,7 +99,7 @@ body {
   margin-top: 36px;
   display: flex;
   justify-content: center;
-  text-aling: center;
+  text-align: center;
   width: 100%;
 }
 .nav-menu-side-nav ul {
